# UPRobotics

./: README.md  bas  comandos_iniciar_rasbperry  comandos_laptop  interfaz.py  links.txt  roadmap.markdown
martino/: CMakeListVM.txt  CMakeLists.txt  CMakeListsRP.txt  package.xml  prueba.cpp
martino/src/: amperaje_publisher.cpp  amperaje_subscriber.cpp  check_connection_publisher.cpp  check_connection_service.cpp  joystick_reader.cpp  martino.cpp  martino_client.cpp  martino_service.cpp  masin.cpp  xbox_reader.cpp
structures/: CMakeLists.txt  README.md  package.xml
structures/srv/: Movement.srv
